--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CarForAll" >
         <activity
+            android:name=".LogInActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login" />
+        <activity
             android:name=".carForm"
             android:exported="false" />
         <activity
